sandbox/output
Hiker.java:7: error: unreported exception Exception; must be caught or declared to be thrown
       return calc(splits);
                  ^
1 error
